# clitutor

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  CODEX_MEMORY.md  LICENSE  README.md  bootstrap.sh  clitutor  deploy.sh  next-steps  pyproject.toml
.codex/: settings.local.json
0.start-here/: instructions.txt
clitutor-web/: .gitignore  generate-state.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
clitutor-web/public/: .htaccess
clitutor-web/public/lessons/: 00_start_here.md  01_slicing_and_dicing.md  02_permissions.md  03_tips_and_tricks.md  04_path.md  05_prompt.md  06_scripting.md  07_networking.md  08_ssh.md  09_git.md  10_vi.md  11_tmux.md  12_dotfiles.md  13_network_security.md  14_next_steps.md  metadata.json
clitutor-web/public/v86/: alpine-fs.json
clitutor-web/src/: main.ts  v86.d.ts
clitutor-web/src/core/: lesson-loader.ts  models.ts  progress.ts  tts.ts  validator.ts  xp.ts
clitutor-web/src/styles/: theme.css
clitutor-web/src/ui/: app.ts  toast.ts
clitutor-web/src/vm/: bashrc.ts  linux-vm.test.ts  linux-vm.ts  sentinel-capture.test.ts  sentinel-capture.ts
docker/: Dockerfile
src/clitutor/: __init__.py  __main__.py  app.py
src/clitutor/assets/: sample_script.sh
tests/: test_executor.py  test_loader.py  test_progress.py  test_sandbox.py  test_student_flow.py  test_validator.py  test_xp.py
x.installing-stuff/: instructions.txt
x.networking/: instructions.txt
x.permissions/: instructions.txt
x.slicing-and-dicing/: instructions.txt
x.tips-and-tricks/: instructions.txt
x.vi/: instructions.txt
(+50 files in other folders)
